--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
     "last 2 versions"
   ],
   "jest": {
+    "cache": false,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/coverage/**"
+    ],
     "moduleFileExtensions": [
       "js",
       "jsx",
@@ -73,7 +79,7 @@
       "jest-serializer-vue"
     ],
     "testMatch": [
-      "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
+      "**/src/**/*.spec.(js|jsx|ts|tsx)|**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
     ],
     "testURL": "http://localhost/",
     "watchPlugins": [
